# stm32-bindings

./: .gitignore  Cargo.toml  d  d.ps1
.github/workflows/: rust.yml
stm32-bindings-gen/: Cargo.toml
stm32-bindings-gen/inc/: app_conf.h  ble-wba.h  link_layer.h  string.h  wba_ble.h  wba_wpan_ble.h  wba_wpan_mac.h  wpan-wba.h
stm32-bindings-gen/res/: Cargo.toml  build.rs
stm32-bindings-gen/res/src/: lib.rs
stm32-bindings-gen/res/src/bindings/: mod.rs
stm32-bindings-gen/src/: lib.rs  main.rs
stm32-bindings-gen/tests/: test.rs
