[package]
name = "stm32-bindings"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/embassy-rs/stm32-data"
description = "Peripheral Access Crate (PAC) for all STM32 chips, including metadata."

# `cargo publish` is unable to figure out which .rs files are needed due to the include! magic.
include = [
    "**/*.rs",
    "**/*.x",
    "**/*.a",
    "**/*.lib",
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = []
default-target = "thumbv8m.main-none-eabihf"
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.embassy_docs]
features = ["pac", "metadata"]
flavors = [
    { regex_feature = "stm32f0.*", target = "thumbv6m-none-eabi" },
    { regex_feature = "stm32f1.*", target = "thumbv7m-none-eabi" },
    { regex_feature = "stm32f2.*", target = "thumbv7m-none-eabi" },
    { regex_feature = "stm32f3.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32f4.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32f7.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32c0.*", target = "thumbv6m-none-eabi" },
    { regex_feature = "stm32g0.*", target = "thumbv6m-none-eabi" },
    { regex_feature = "stm32g4.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32h5.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "stm32h7.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32l0.*", target = "thumbv6m-none-eabi" },
    { regex_feature = "stm32l1.*", target = "thumbv7m-none-eabi" },
    { regex_feature = "stm32l4.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32l5.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "stm32u0.*", target = "thumbv6m-none-eabi" },
    { regex_feature = "stm32u5.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "stm32wba.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "stm32wb.*", target = "thumbv7em-none-eabi" },
    { regex_feature = "stm32wl.*", target = "thumbv7em-none-eabi" },
]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.0", optional = true }

[features]
default = ["pac", "wba_wpan_mac", "wba_wpan_ble"]

wba_wpan_mac = []
wba_wpan_ble = []
n6_ai_runtime = []

# Build the actual PAC. Set by default.
# If you just want the metadata, unset it with `default-features = false`. 
pac = []

# Build the chip metadata.
# If set, a const `stm32_metapac::METADATA` will be exported, containing all the 
# metadata for the currently selected chip.
metadata = []

# Implement the `defmt::Format` trait for many types.
defmt = ["dep:defmt"]

rt = ["cortex-m-rt/device"]

# Library selection features

lib_wba5_linklayer_ble_basic_20_links_lib = []
lib_wba5_linklayer_ble_basic_lib = []
lib_wba5_linklayer_ble_basic_plus_20_links_lib = []
lib_wba5_linklayer_ble_basic_plus_lib = []
lib_wba5_linklayer_ble_full_lib = []
lib_wba5_linklayer_ble_mac_lib = []
lib_wba5_linklayer_ble_peripheral_only_lib = []
lib_wba5_linklayer_ble_thread_lib = []
lib_wba5_linklayer_rawmac_lib = []
lib_wba5_linklayer_thread_lib = []
lib_wba5_linklayer15_4 = []
lib_wba6_linklayer_ble_basic_20_links_lib = []
lib_wba6_linklayer_ble_basic_lib = []
lib_wba6_linklayer_ble_basic_plus_20_links_lib = []
lib_wba6_linklayer_ble_basic_plus_lib = []
lib_wba6_linklayer_ble_full_lib = []
lib_wba6_linklayer_ble_mac_lib = []
lib_wba6_linklayer_ble_peripheral_only_lib = []
lib_wba6_linklayer_ble_thread_lib = []
lib_wba6_linklayer_rawmac_lib = []
lib_wba6_linklayer_thread_lib = []
lib_wba6_linklayer15_4 = []
lib_wba_mac_lib = []
lib_stm32wba_ble_stack_po = []
lib_stm32wba_ble_stack_llo = []
lib_stm32wba_ble_stack_full = []
lib_stm32wba_ble_stack_basic = []
lib_stm32wba_ble_stack_basic_plus = []
lib_lc3 = []
lib_codec_mngr = []
lib_ble_audio = []
